--- a/src/app/alterignore1/alterignore1.component.html
+++ b/src/app/alterignore1/alterignore1.component.html
@@ -3,6 +3,6 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="../../assets/img/pag 5.1.png" alt="">
+            <img src="/assets/img/pag 5.1.png" alt="">
         </div>
     </div>
