--- a/src/app/classroom1/classroom1.component.html
+++ b/src/app/classroom1/classroom1.component.html
@@ -3,7 +3,7 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="../../assets/img/pag 7.2.1.png" alt="">
+            <img src="/assets/img/pag 7.2.1.png" alt="">
         </div>
     </div>
 
