--- a/src/app/cafeteria2/cafeteria2.component.html
+++ b/src/app/cafeteria2/cafeteria2.component.html
@@ -2,7 +2,7 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="../../assets/img/pag4.1.png" alt="">
+            <img src="/assets/img/pag4.1.png" alt="">
         </div>
     </div>
 
