--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
     <div class="container-comic">
         <div class="comic-content">
-            <img src="../../assets/img/home.png" alt="">
+            <img src="/assets/img/home.png" alt="">
             <div style="display: flex; justify-content: center; gap: 30px; margin-top: -20%;">
                 <div class="item-talk-teacher" (click)="goToComic()"></div>
             </div>
