Adjust page and icon

--- a/src/app/page2/page2.component.html
+++ b/src/app/page2/page2.component.html
@@ -3,7 +3,7 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="/assets/img/pag2.png" alt="">
+            <img src="YNQJM/assets/img/pag2.png" alt="">
         </div>
     </div>
 
