--- a/src/app/invite1/invite1.component.html
+++ b/src/app/invite1/invite1.component.html
@@ -3,7 +3,7 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="/assets/img/pag 5.2.png" alt="">
+            <img src="YNQJM/assets/img/pag 5.2.png" alt="">
         </div>
     </div>
 
