--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -2,7 +2,7 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="/assets/img/pag1.png" alt="">
+            <img src="YNQJM/assets/img/pag1.png" alt="">
         </div>
     </div>
 
