Adjust webpage routes

--- a/src/app/alterinvite1/alterinvite1.component.html
+++ b/src/app/alterinvite1/alterinvite1.component.html
@@ -3,6 +3,6 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="YNQJM/assets/img/pag 5.2.png" alt="">
+            <img src="assets/img/pag 5.2.png" alt="">
         </div>
     </div>
