--- a/src/app/assertivepage1/assertivepage1.component.html
+++ b/src/app/assertivepage1/assertivepage1.component.html
@@ -3,7 +3,7 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="YNQJM/assets/img/pag 3.1.png" alt="">
+            <img src="assets/img/pag 3.1.png" alt="">
         </div>
     </div>
 
