--- a/src/app/page4/page4.component.html
+++ b/src/app/page4/page4.component.html
@@ -2,7 +2,7 @@
 
     <div class="container-comic">
         <div class="comic-content">
-            <img src="YNQJM/assets/img/pag3.png" alt="">
+            <img src="assets/img/pag3.png" alt="">
         </div>
     </div>
 
