--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container-comic">
     <div class="comic-content">
-        <img src="YNQJM/assets/img/home.png" alt="">
+        <img src="assets/img/home.png" alt="">
 
         
 
